feat: add Booking module routes
