# src/common/dto/request/create-booking.dto.ts
@@ -1,0 +1,19 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsDateString, IsMongoId, IsNotEmpty } from 'class-validator';
+
+export class CreateBookingDto {
+  @ApiProperty({ description: 'Vehicle id' })
+  @IsMongoId()
+  @IsNotEmpty()
+  templateId: string;
+
+  @ApiProperty({ description: 'Booking start date', example: '2025-07-29' })
+  @IsDateString()
+  @IsNotEmpty()
+  startDate: string;
+
+  @ApiProperty({ description: 'Booking end date', example: '2025-07-30' })
+  @IsDateString()
+  @IsNotEmpty()
+  endDate: string;
+}
